fixed text spacing

--- a/Saucier720-app/src/app/homepage/FEC/landing-page/FEC/about-us/about-us.component.scss
+++ b/Saucier720-app/src/app/homepage/FEC/landing-page/FEC/about-us/about-us.component.scss
@@ -14,7 +14,7 @@ h3 {
   margin-bottom: 2vh; /* Adjust the margin as needed */
   color: var(--primary-color);
   border-radius: 50%;
-  width: 19.5vw; 
+  width: 100%; 
 }
 
 p {
