--- a/Saucier720-app/src/app/homepage/FEC/landing-page/FEC/mission-statement/mission-statement.component.scss
+++ b/Saucier720-app/src/app/homepage/FEC/landing-page/FEC/mission-statement/mission-statement.component.scss
@@ -11,17 +11,16 @@
 
 h3 {
   font-size: 2vw; /* Make the name larger, adjust as needed */
-  margin-bottom: 2vh; /* Adjust the margin as needed */
+  margin-bottom: 1vh; /* Adjust the margin as needed ß*/
   color: var(--primary-color);
   border-radius: 50%;
-  width: 19.5vw; 
+  width: 110%; 
 }
 
 p {
   font-size: 1vw; /* Make the name larger, adjust as needed */
   margin-bottom: 1vh; /* Adjust the margin as needed */
   color: var(--text-color);
-  border-radius: 50%;
   width: 100%; 
 }
 
